--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#screenshots" class="nav-link">
+                            <a href="#subsidiaries" class="nav-link">
                                 Subsidiaries
                             </a>
                         </li>
